# newts-lab

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW_FINDINGS.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  properdocs.yml
.claude/: settings.json  settings.local.json
dashboard/: DASHBOARD.md  README.md  serve.py  sources.py
docs/: DESIGN.md  autonomy.md  compete.md  configuration.md  dashboard.md  discuss.md  getting-started.md  index.md  project-types.md  projects.md  skills.md  tools.md  workflow.md
ideas/: README.md
lab/: REGISTRY.md  config.yaml
papers/: README.md
projects/: README.md
studies/: README.md
templates/: README.md  SYSTEM.md
templates/project/: .gitignore  AGENTS.md  CLAUDE.md  EXPERIMENT_LOG.md  NOTES.md  PLAN.md  README.md  control.yaml  pyproject.toml
templates/project/.claude/: settings.json
templates/project/.claude/skills/domain-modeling/: ADR-FORMAT.md  SKILL.md
templates/project/.claude/skills/grill-with-docs/: SKILL.md
templates/project/.github/workflows/: ci.yml
templates/project/configs/: base.yaml
templates/project/configs/experiments/: exp-001-smoke.yaml
templates/project/runs/: README.md
templates/project/scripts/: check_project.py  compare.py  lab_bus.py  reconcile.py  run.py  status.py  sweep.py  trace_hook.py
templates/project/scripts/figures/: README.md
templates/project/src/project_pkg/: config.py  experiment.py  figures.py  seeding.py  tracking.py
templates/project/tests/: test_runner_shell.py  test_smoke.py
tests/: conftest.py  pytest.ini  test_agent_runner.py  test_s2.py  (+9 more)
(+103 files in other folders)
