[project]
name = "{{slug}}"
version = "0.1.0"
description = "{{title}} — spawned from Newts' Lab"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    # Add domain deps here (torch, transformers, ...) and pin via `uv lock`.
    # Keep the stack minimal — every dep is a reproducibility liability.
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project_pkg"]
